--- a/article/templates/article/inquiry_done.html
+++ b/article/templates/article/inquiry_done.html
@@ -21,11 +21,16 @@
     <meta property="fb:app_id" content="appIDを入力">
     <!--STATIC FILE-->
     <link rel="stylesheet" type='text/css' href="{% static 'article/css/inquiry.css' %}">
+    <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_detail.css' %}">
     <!-- indexしない -->
     <meta name="robots" content="noindex,nofollow">
 </head>
 
 <body>
+    <div class="message">
+        <p>働く女性のための情報メディア</p>
+        {% include 'article/module/smp_nav.html' %}
+    </div>
     {% include 'article/module/header.html' %}
     <div class="wrapper">
         <div class="contents">
