--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -8,6 +8,10 @@
 <link rel="icon" href="" sizes="16x16" type="image/png">
 <!-- BASE STATIC FILES -->
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/index.css' %}">
+<link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/index_smp.css' %}">
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/module/searchbox.css' %}">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static 'article/css/smp/hum.js' %}"></script>
 <!-- FONT -->
 <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
