--- a/article/templates/article/posting/post_list.html
+++ b/article/templates/article/posting/post_list.html
@@ -19,6 +19,8 @@
     <meta property="og:site_name" content="サイト名">
     <meta property="og:locale" content="ja_JP">
     <meta property="fb:app_id" content="appIDを入力">
+    <!-- STATIC FILES -->
+    <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_search_result.css' %}">
     <!-- indexしない -->
     <meta name="robots" content="noindex,nofollow">
 </head>
@@ -48,6 +50,28 @@
                 </div>
             {% endfor %}            
             </div>
+        <div class="pagination" style="margin-top: 1000px;">
+            <!-- 前へ の部分 -->
+            {% if page_obj.has_previous %}
+            <a class="pagination_block" href="?page={{ page_obj.previous_page_number }}&q={{ request.GET.q }}">前へ</a>
+            {% endif %}
+
+            <!-- 数字の部分 -->
+            {% for num in page_obj.paginator.page_range %}
+            {% if num <= page_obj.number|add:5 and num >= page_obj.number|add:-5 %}
+            {% if page_obj.number == num %}
+            <span class="pagination_block_current">{{ num }}</span>
+            {% else %}
+            <a class="pagination_block" href="?page={{ num }}&q={{ request.GET.q }}">{{ num }}</a>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+
+            <!-- 次へ の部分 -->
+            {% if page_obj.has_next %}
+            <a class="pagination_block" href="?page={{ page_obj.next_page_number }}&q={{ request.GET.q }}">次へ</a>
+            {% endif %}
+        </div>
         </div>
         {% include 'article/module/sidebar.html' %}
         {% include 'article/module/footer.html' %}
