--- a/article/templates/article/module/header.html
+++ b/article/templates/article/module/header.html
@@ -1,5 +1,5 @@
 {% load static %}
 {% load humanize %}
 <div class="header">
-    <a href="{% url 'article:index' %}"><div class="brand"><img src="{% static 'article/info/brand.png'%}" style="height: 80px; width: 240px;"></div></a>
+    <a href="{% url 'article:index' %}"><div class="brand"><img class="logo" src="{% static 'article/info/brand.png'%}"></div></a>
 </div>
