--- a/article/templates/article/privacy_policy.html
+++ b/article/templates/article/privacy_policy.html
@@ -21,95 +21,100 @@
     <meta property="fb:app_id" content="appIDを入力">
     <!--STATIC FILE-->
     <link rel="stylesheet" type='text/css' href="{% static 'article/css/privacy_policy.css' %}">
+    <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_detail.css' %}">
     <!-- indexしない -->
     <meta name="robots" content="noindex,nofollow">
 </head>
 
 <body>
-{% include 'article/module/header.html' %}
-<div class="wrapper">
-    <p>
-    Uvey（以下「運営者」という）は、
-    運営者の提供するサービスの利用者（以下「ユーザー」という）に関する個人情報を含んだ情報（以下「ユーザー情報」という）の取扱いについて、以下のとおりプライバシーポリシー（以下「本ポリシー」という）を定めます。
-    本ポリシーは、運営者が提供する各種サービスごとに定めるプライバシーポリシーおよび利用規約、その他関連する規程とともに、運営者が提供する全てのサービス（以下「本サービス」という）に適用されるものとします。
-    </p>
-    <p>
-    １．取得する情報およびその取得方法
-    <br>運営者が取得するユーザー情報は、その取得方法に応じて、以下のとおりとなります。
-    <br>
-    （１）ユーザーから直接取得する情報
-    運営者は、本サービスの利用にあたって、ユーザーから以下の情報を取得します。
-    <br>・氏名
-    <br>・メールアドレス
-    <br>・サービスの利用履歴
-    <br>・その他運営者がアプリまたはウェブサイトにおいて取得すると定めた情報
-    </p>
-    <p>
-    （２）技術情報の取得
-    ユーザーが本サービスにアクセスする際に、運営者は以下の技術情報を取得します。
-    <br>・端末の種類
-    <br>・端末識別子
-    <br>・ブラウザの種類
-    <br>・リファラ
-    <br>・IPアドレス
-    <br>・Cookie
-    <br>・その他広告識別子
-    </p>
-    <p>
-    （３）外部サービスとの連携により取得する情報
-    <br>運営者は、本サービスの利用にあたって、ユーザーが外部サービスとの連携を許可した場合、以下の情報を当該外部サービスから取得します。
-    <br>・外部サービスでユーザーが利用するID
-    <br>・その他外部サービスのプライバシー設定によりユーザーが連携先に開示を認めた情報
-    </p>
-    <p>
-    ２．利用目的
-    <br>運営者は、取得したユーザー情報を以下に定める目的のために使用します。
-    <br>・商品・サービスの提供
-    <br>・利用料金請求
-    <br>・本人確認、ユーザー認証
-    <br>・ユーザーのトラフィック測定および行動測定
-    <br>・広告の配信およびその成果確認
-    <br>・本サービスに関する規約変更など重要な通知の実施
-    <br>・本サービスに関するご案内・お問い合わせへの対応
-    <br>・その他運営者が提供する各種サービスにおいて定める目的
-    </p>
-    <p>
-    ３．個人情報の第三者提供
-    <br>運営者は、ユーザー情報のうち個人情報に関して、あらかじめユーザーの同意を得ることなく、第三者に提供しません。但し、次に定める場合にはこの限りではなく、ユーザー情報を第三者に提供することがあります。
-    <br>（１）外部サービスとの連携または、外部サービスを利用した認証にあたり、当該外部サービス運営会社にユーザー情報を提供する場合
-    <br>（２）国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して、運営者が協力する必要があり、かつユーザーからの同意取得が当該事務の遂行に支障を及ぼすおそれがある場合
-    <br>（３）その他法令で認められる場合
-    </p>
-    <p>
-    ４．個人情報の開示
-    <br>運営者は、ユーザーから、個人情報保護法の定めに基づき個人情報の開示を求められたときは、ユーザーご本人からのご請求であることを確認のうえで、ユーザーに対し、遅滞なく開示を行います。但し、個人情報保護法その他の法令により、運営者が開示の義務を負わない場合は、この限りではありません。なお、具体的な個人情報の開示の申出先、手続、手数料につきましては、「個人情報の開示、訂正、追加、削除について」をご覧ください。
-    <p>
-    ５．個人情報の訂正および利用の停止等
-    <br>（１）運営者は、ユーザーから、個人情報の内容が事実ではなく、訂正・追加・削除（以下「訂正等」という）を求められたときは、ユーザーご本人からのご請求であることを確認のうえ遅滞なく調査を行い、その結果に基づき、個人情報の内容の訂正等を行い、その旨をユーザーに通知します。
-    <br>（２）運営者は、ユーザーから、以下の各号の理由に基づき個人情報の利用の停止または消去（以下「利用の停止等」という）を求められたときは、ユーザーご本人からのご請求であることを確認のうえ遅滞なく調査を行い、その結果に基づき、個人情報の利用の停止等を行い、その旨をユーザーに通知します。
-    <br>①あらかじめ公表された利用目的の範囲を超えて個人情報が取扱われているという理由
-    <br>②偽りその他の手段により個人情報が取得されたものであるという理由
-    <br>（３）個人情報保護法その他の法令により、運営者が訂正等または利用の停止等の義務を負わない場合、本条１項、２項の定めは適用されません。
-    </p>
-    <p>
-    ７．お問い合わせ
-    <br>運営者のプライバシーポリシーに関する、ご意見、ご質問、苦情の申出その他ユーザー情報の取扱いに関するお問い合わせは、以下の窓口にご連絡ください。
-    <br>「問い合わせ窓口」は<a href="{% url 'article:inquiry'%}">こちら</a>
-    </p>
-   <p> 
-    ８．改定
-    <br>運営者は、運営者の裁量に基づいて、本ポリシーを変更します。但し、個人情報保護法その他の法令により、改定に必要な手続が定められている場合には、当該法令に基づき改定を行うものとします。
-    <br>なお、運営者は、ユーザーに対して本ポリシーを変更する場合には、変更後の本ポリシーの施行時期および内容を以下の方法で周知します。
-    <br>・運営者のウェブサイトへの掲示
-    <br>・ユーザーへの通知
-    <br>・その他適切な方法
-    </p>
-    <p>
-    ９．制定日・改定日
-    <br>制定：2020年11月1日
-    </p>
-{% include 'article/module/footer.html' %}
-</div>
+    <div class="message">
+        <p>働く女性のための情報メディア</p>
+        {% include 'article/module/smp_nav.html' %}
+    </div>
+    {% include 'article/module/header.html' %}
+    <div class="wrapper">
+        <p>
+        Uvey（以下「運営者」という）は、
+        運営者の提供するサービスの利用者（以下「ユーザー」という）に関する個人情報を含んだ情報（以下「ユーザー情報」という）の取扱いについて、以下のとおりプライバシーポリシー（以下「本ポリシー」という）を定めます。
+        本ポリシーは、運営者が提供する各種サービスごとに定めるプライバシーポリシーおよび利用規約、その他関連する規程とともに、運営者が提供する全てのサービス（以下「本サービス」という）に適用されるものとします。
+        </p>
+        <p>
+        １．取得する情報およびその取得方法
+        <br>運営者が取得するユーザー情報は、その取得方法に応じて、以下のとおりとなります。
+        <br>
+        （１）ユーザーから直接取得する情報
+        運営者は、本サービスの利用にあたって、ユーザーから以下の情報を取得します。
+        <br>・氏名
+        <br>・メールアドレス
+        <br>・サービスの利用履歴
+        <br>・その他運営者がアプリまたはウェブサイトにおいて取得すると定めた情報
+        </p>
+        <p>
+        （２）技術情報の取得
+        ユーザーが本サービスにアクセスする際に、運営者は以下の技術情報を取得します。
+        <br>・端末の種類
+        <br>・端末識別子
+        <br>・ブラウザの種類
+        <br>・リファラ
+        <br>・IPアドレス
+        <br>・Cookie
+        <br>・その他広告識別子
+        </p>
+        <p>
+        （３）外部サービスとの連携により取得する情報
+        <br>運営者は、本サービスの利用にあたって、ユーザーが外部サービスとの連携を許可した場合、以下の情報を当該外部サービスから取得します。
+        <br>・外部サービスでユーザーが利用するID
+        <br>・その他外部サービスのプライバシー設定によりユーザーが連携先に開示を認めた情報
+        </p>
+        <p>
+        ２．利用目的
+        <br>運営者は、取得したユーザー情報を以下に定める目的のために使用します。
+        <br>・商品・サービスの提供
+        <br>・利用料金請求
+        <br>・本人確認、ユーザー認証
+        <br>・ユーザーのトラフィック測定および行動測定
+        <br>・広告の配信およびその成果確認
+        <br>・本サービスに関する規約変更など重要な通知の実施
+        <br>・本サービスに関するご案内・お問い合わせへの対応
+        <br>・その他運営者が提供する各種サービスにおいて定める目的
+        </p>
+        <p>
+        ３．個人情報の第三者提供
+        <br>運営者は、ユーザー情報のうち個人情報に関して、あらかじめユーザーの同意を得ることなく、第三者に提供しません。但し、次に定める場合にはこの限りではなく、ユーザー情報を第三者に提供することがあります。
+        <br>（１）外部サービスとの連携または、外部サービスを利用した認証にあたり、当該外部サービス運営会社にユーザー情報を提供する場合
+        <br>（２）国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して、運営者が協力する必要があり、かつユーザーからの同意取得が当該事務の遂行に支障を及ぼすおそれがある場合
+        <br>（３）その他法令で認められる場合
+        </p>
+        <p>
+        ４．個人情報の開示
+        <br>運営者は、ユーザーから、個人情報保護法の定めに基づき個人情報の開示を求められたときは、ユーザーご本人からのご請求であることを確認のうえで、ユーザーに対し、遅滞なく開示を行います。但し、個人情報保護法その他の法令により、運営者が開示の義務を負わない場合は、この限りではありません。なお、具体的な個人情報の開示の申出先、手続、手数料につきましては、「個人情報の開示、訂正、追加、削除について」をご覧ください。
+        <p>
+        ５．個人情報の訂正および利用の停止等
+        <br>（１）運営者は、ユーザーから、個人情報の内容が事実ではなく、訂正・追加・削除（以下「訂正等」という）を求められたときは、ユーザーご本人からのご請求であることを確認のうえ遅滞なく調査を行い、その結果に基づき、個人情報の内容の訂正等を行い、その旨をユーザーに通知します。
+        <br>（２）運営者は、ユーザーから、以下の各号の理由に基づき個人情報の利用の停止または消去（以下「利用の停止等」という）を求められたときは、ユーザーご本人からのご請求であることを確認のうえ遅滞なく調査を行い、その結果に基づき、個人情報の利用の停止等を行い、その旨をユーザーに通知します。
+        <br>①あらかじめ公表された利用目的の範囲を超えて個人情報が取扱われているという理由
+        <br>②偽りその他の手段により個人情報が取得されたものであるという理由
+        <br>（３）個人情報保護法その他の法令により、運営者が訂正等または利用の停止等の義務を負わない場合、本条１項、２項の定めは適用されません。
+        </p>
+        <p>
+        ７．お問い合わせ
+        <br>運営者のプライバシーポリシーに関する、ご意見、ご質問、苦情の申出その他ユーザー情報の取扱いに関するお問い合わせは、以下の窓口にご連絡ください。
+        <br>「問い合わせ窓口」は<a href="{% url 'article:inquiry'%}">こちら</a>
+        </p>
+    <p> 
+        ８．改定
+        <br>運営者は、運営者の裁量に基づいて、本ポリシーを変更します。但し、個人情報保護法その他の法令により、改定に必要な手続が定められている場合には、当該法令に基づき改定を行うものとします。
+        <br>なお、運営者は、ユーザーに対して本ポリシーを変更する場合には、変更後の本ポリシーの施行時期および内容を以下の方法で周知します。
+        <br>・運営者のウェブサイトへの掲示
+        <br>・ユーザーへの通知
+        <br>・その他適切な方法
+        </p>
+        <p>
+        ９．制定日・改定日
+        <br>制定：2020年11月1日
+        </p>
+    {% include 'article/module/footer.html' %}
+    </div>
 </body>
 
 </html>
