--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -5,8 +5,11 @@
 
 <head>
   {% include 'article/module/head.html' %}
-  <title>UVEY[ユービイ]｜職場の悩みを解決</title>
-  <meta name="description" content="職場で悩みを抱えてませんか？聞いて話してお悩みを解消！">
+  <title>職場に悩む女性のメディア｜UVEY[ユービイ]</title>
+  <meta content="
+  「{{ first.title }}」ー 「人間関係」・「ハラスメント」・「恋愛」など職場で悩みを抱えるあなたにおくる情報メディア／知っていたら役立つ。
+  周りはこんなこと考えてるのかな？職場で活躍する女性に参考になる情報をお届けします。
+  " name="description">
   <link rel="canonical" href="">
   <!-- SNS -->
   <meta property="og:url" content="ページのURL">
@@ -19,8 +22,6 @@
   <meta property="og:site_name" content="サイト名">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="appIDを入力">
-  <!-- indexしない -->
-  <meta name="robots" content="noindex,nofollow">
 </head>
 
 <body>
