--- a/article/templates/article/inquiry.html
+++ b/article/templates/article/inquiry.html
@@ -5,7 +5,7 @@
 
 <head>
     {% include 'article/module/head.html' %}
-    <title>UVEY[ユービイ]｜職場の悩みを解決</title>
+    <title>お問合せフォーム｜UVEY[ユービイ]</title>
     <meta name="description" content="職場で悩みを抱えてませんか？聞いて話してお悩みを解消！">
     <link rel="canonical" href="">
     <!-- SNS -->
@@ -21,8 +21,8 @@
     <meta property="fb:app_id" content="appIDを入力">
     <!--STATIC FILE-->
     <link rel="stylesheet" type='text/css' href="{% static 'article/css/inquiry.css' %}">
-	<link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_detail.css' %}">
-	<!-- indexしない -->
+		<link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_detail.css' %}">
+		<!-- indexしない -->
     <meta name="robots" content="noindex,nofollow">
 </head>
 
