--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes">
 <!-- ICON -->
 <link rel="apple-touch-icon-precomposed" href="">
-<link rel="icon" href="" sizes="16x16" type="image/png">
+<link rel="icon" type="image/x-icon" href="{% static 'article/info/fav.png'%}">
 <!-- BASE STATIC FILES -->
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/index.css' %}">
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/index_smp.css' %}">
