--- a/article/templates/article/privacy_policy.html
+++ b/article/templates/article/privacy_policy.html
@@ -5,7 +5,7 @@
 
 <head>
     {% include 'article/module/head.html' %}
-    <title>UVEY[ユービイ]｜職場の悩みを解決</title>
+    <title>プライバシーポリシー｜UVEY[ユービイ]</title>
     <meta name="description" content="職場で悩みを抱えてませんか？聞いて話してお悩みを解消！">
     <link rel="canonical" href="">
     <!-- SNS -->
