--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -10,7 +10,7 @@
   「{{ first.title }}」ー 「人間関係」・「ハラスメント」・「恋愛」など職場で悩みを抱えるあなたにおくる情報メディア／知っていたら役立つ。
   周りはこんなこと考えてるのかな？職場で活躍する女性に参考になる情報をお届けします。
   " name="description">
-  <link rel="canonical" href="">
+  <link rel="canonical" href="https://uvey.jp">
   <!-- SNS -->
   <meta property="og:url" content="ページのURL">
   <meta property="og:title" content="ページのタイトル">
