--- a/article/templates/article/inquiry.html
+++ b/article/templates/article/inquiry.html
@@ -6,7 +6,7 @@
 <head>
     {% include 'article/module/head.html' %}
     <title>お問合せフォーム｜UVEY[ユービイ]</title>
-    <meta name="description" content="職場で悩みを抱えてませんか？聞いて話してお悩みを解消！">
+    <meta name="description" content="お問合せフォーム｜UVEY.JP">
     <link rel="canonical" href="">
     <!-- SNS -->
     <meta property="og:url" content="ページのURL">
