--- a/article/templates/article/detail.html
+++ b/article/templates/article/detail.html
@@ -20,6 +20,8 @@
   <meta property="fb:app_id" content="appIDを入力">
   <!-- STATIC FILE-->
   <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_detail.css' %}">
+  <link rel="stylesheet" type='text/css' href="{% static 'article/css/detail.css' %}">
+  <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/detail.css' %}">
 </head>
 
 <body>
