--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -15,3 +15,12 @@
     <script type="text/javascript" src="{% static 'article/css/smp/hum.js' %}"></script>
 <!-- FONT -->
 <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169304107-3"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-169304107-3');
+</script>
