--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -24,3 +24,4 @@
 
     gtag('config', 'UA-169304107-3');
 </script>
+<script data-ad-client="ca-pub-4049657456160025" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
