--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -7,8 +7,8 @@
   {% include 'article/module/head.html' %}
   <title>職場に悩む女性のメディア｜UVEY[ユービイ]</title>
   <meta content="
-  「{{ first.title }}」ー 「人間関係」・「ハラスメント」・「恋愛」など職場で悩みを抱えるあなたにおくる情報メディア／知っていたら役立つ。
-  周りはこんなこと考えてるのかな？職場で活躍する女性に参考になる情報をお届けします。
+  「人間関係」・「ハラスメント」・「恋愛」など職場で悩みを抱えるあなたにおくる情報メディア／知っていたら役立つ。
+  周りはこんなこと考えてるのかな？職場で活躍する女性に参考になる情報をお届けします。－「{{ first.title }}」
   " name="description">
   <link rel="canonical" href="https://uvey.jp">
   <!-- SNS -->
