--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -4,8 +4,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes">
 <!-- ICON -->
-<link rel="apple-touch-icon-precomposed" href="">
-<link rel="icon" type="image/x-icon" href="{% static 'article/info/fav.png'%}">
+<link rel="ishortcut icon" type="image/x-icon" href="{% static 'article/info/fav.png'%}">
+<link rel="apple-touch-icon" href="{% static 'article/info/fav.png'%}" sizes="180x180">
+<link rel="icon" type="image/png" href="{% static 'article/info/fav.png'%}" sizes="192x192">
 <!-- BASE STATIC FILES -->
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/index.css' %}">
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/index_smp.css' %}">
@@ -13,8 +14,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'article/css/smp/hum.js' %}"></script>
-<!-- FONT -->
-<link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169304107-3"></script>
 <script>
