--- a/article/templates/article/inquiry_done.html
+++ b/article/templates/article/inquiry_done.html
@@ -34,6 +34,13 @@
     {% include 'article/module/header.html' %}
     <div class="wrapper">
         <div class="contents">
+          <!-- breadcrumbs -->
+           <div class="breadcrumbs" style="margin-bottom: 40px;">
+             <img src="{% static 'article/info/home.png' %}" style="width: 20px;">
+             <a style="font-size: 13px; color: grey;" href="{% url 'article:index'%}"> Home ></a>
+             <a style="font-size: 13px; color: grey;" href="{% url 'article:inquiry' %}"> お問合せ ></a>
+             <a style="font-size: 13px; color: grey;" href=""> 完了</a>
+           </div>
             <div class="inquiryTitle">送信完了</div>
             <div class="inquiryDone">
                 <p>リクエストが送信されました</p>
