--- a/article/templates/article/detail.html
+++ b/article/templates/article/detail.html
@@ -32,6 +32,13 @@
   {% include 'article/module/header.html' %}
   <div class="wrapper">
     <div class="contents">
+  <!-- breadcrumbs -->
+  <div class="breadcrumbs">
+    <img src="{% static 'article/info/home.png' %}" style="width: 20px;">
+    <a style="font-size: 13px; color: grey;" href="{% url 'article:index'%}"> Home ></a>
+    <a style="font-size: 13px; color: grey;" href="{% url 'article:search_result' %}"> 検索結果 ></a>
+  </div>
+
       <h1>{{ object.title }}</h1>
       {{ object.content | safe }}
       <div style="text-align: right; font-size: 14px; margin:50px 0 0 0; padding: 0; color: grey;">最終更新日：{{ object.updated_at|date:"Y-m-d" }}</div>
