--- a/article/templates/article/detail.html
+++ b/article/templates/article/detail.html
@@ -4,9 +4,8 @@
 
 <head>
   {% include 'article/module/head.html' %}
-  <title>UVEY[ユービイ]｜{{ object.title }}</title>
+  <title>{{ object.title }}｜UVEY[ユービイ]</title>
   <meta name="description" content="{{ object.content }}">
-  <link rel="canonical" href="">
   <!-- SNS -->
   <meta property="og:url" content="ページのURL">
   <meta property="og:title" content="ページのタイトル">
