--- a/article/templates/article/search_result.html
+++ b/article/templates/article/search_result.html
@@ -17,22 +17,11 @@
   ">
   {% else %}
   <meta name="description" content="
-  記事一覧ー 「人間関係」・「ハラスメント」・「恋愛」など職場で悩みを抱えるあなたにおくる情報メディア／知っていたら役立つ。
+  記事一覧｜「人間関係」・「ハラスメント」・「恋愛」など職場で悩みを抱えるあなたにおくる情報メディア／知っていたら役立つ。
     周りはこんなこと考えてるのかな？職場で活躍する女性に参考になる情報をお届けします。
   ">
   {% endif %}
   <link rel="canonical" href="https://uvey.jp/search/">
-  <!-- SNS -->
-  <meta property="og:url" content="ページのURL">
-  <meta property="og:title" content="ページのタイトル">
-  <meta property="og:type" content="ページのタイプ">
-  <meta property="og:description" content="記事の抜粋">
-  <meta property="og:image" content="画像のURL">
-  <meta name="twitter:card" content="カード種類">
-  <meta name="twitter:site" content="@Twitterユーザー名">
-  <meta property="og:site_name" content="サイト名">
-  <meta property="og:locale" content="ja_JP">
-  <meta property="fb:app_id" content="appIDを入力">
   <!-- STATIC FILES -->
   <link rel="stylesheet" type='text/css' href="{% static 'article/css/search_result.css' %}">
   <link rel="stylesheet" type='text/css' href="{% static 'article/css/smp/footer_search_result.css' %}">
