--- a/article/templates/article/detail.html
+++ b/article/templates/article/detail.html
@@ -28,7 +28,7 @@
   </div>
       <h1>{{ object.title }}</h1>
       {{ object.content | safe }}
-      <div style="text-align: right; font-size: 14px; margin:50px 0 0 0; padding: 0; color: grey;">最終更新日：{{ object.updated_at|date:"Y-m-d" }}</div>
+      <div style="text-align: right; font-size: 14px; margin:50px 0 0 0; padding: 0; color: grey;">登録日：{{ object.created_at|date:"Y-m-d" }}</div>
     </div>
     {% include 'article/module/sidebar.html' %}
     {% include 'article/module/footer.html' %}
